fix: connecting to database 'mizdooni' and creating table 'user' is done

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,1 +1,9 @@
 spring.application.name=Mizdooni
+spring.datasource.url=jdbc:mysql://localhost:3306/mizdooni
+spring.datasource.username=root
+spring.datasource.password=rootpassword
+
+spring.jpa.show-sql=true
+spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl.auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate
