--- a/pom.xml
+++ b/pom.xml
@@ -77,8 +77,18 @@
 			<artifactId>hibernate-core</artifactId>
 			<version>6.5.1.Final</version>
 		</dependency>
+        <dependency>
+            <groupId>commons-dbcp</groupId>
+            <artifactId>commons-dbcp</artifactId>
+            <version>1.4</version>
+        </dependency>
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<version>8.0.19</version>
+		</dependency>
 
-	</dependencies>
+    </dependencies>
 
 	<build>
 		<plugins>
@@ -96,6 +106,12 @@
 				</configuration>
 			</plugin>
 		</plugins>
+		<resources>
+			<resource>
+				<directory>src/main/resources</directory>
+			</resource>
+			<!-- Other resource configurations -->
+		</resources>
 	</build>
 
 </project>
