fix: code was refactored for the next phase

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,11 +1,8 @@
-spring.application.name=Mizdooni
-
-#spring.datasource.url=jdbc:mysql://localhost:3306/mizdooni
-#spring.datasource.url = jdbc:mysql://localhost:3306/mizdooni?createDatabaseIfNotExist=true&autoReconnect=true&useSSL=false&useUnicode=yes&characterEncoding=UTF-8&allowPublicKeyRetrieval=true
-spring.datasource.url = jdbc:mysql://localhost:3306/mizdooni?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=EDT&createDatabaseIfNotExist=true
-
-spring.datasource.username=root 
+spring.datasource.url=jdbc:mysql://localhost:3306/mizdooni
+spring.datasource.username=root
 spring.datasource.password=rootpassword
+spring.application.name=mizdooni
+
 
 spring.jpa.show-sql=true
 spring.jpa.generate-ddl=true
