--- a/pom.xml
+++ b/pom.xml
@@ -76,6 +76,7 @@
 			<groupId>org.hibernate.orm</groupId>
 			<artifactId>hibernate-core</artifactId>
 			<version>6.5.1.Final</version>
+			<scope>compile</scope>
 		</dependency>
         <dependency>
             <groupId>commons-dbcp</groupId>
