feat: HMAC256 was applied as the hash function

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -3,8 +3,10 @@ spring.datasource.username=root
 spring.datasource.password=rootpassword
 spring.application.name=mizdooni
 
-
 spring.jpa.show-sql=true
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl.auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate
+
+spring.security.oauth2.client.registration.google.client-id=62778481787-6h22qrtgc9rd2h8frjbgmi5ecsjknslv.apps.googleusercontent.com
+spring.security.oauth2.client.registration.google.client-secret=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
