feat: docker files added

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,7 +1,7 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/mizdooni
+spring.datasource.url=jdbc:mysql://localhost:3306/Mizdooni
 spring.datasource.username=root
 spring.datasource.password=rootpassword
-spring.application.name=mizdooni
+spring.application.name=Mizdooni
 
 spring.jpa.show-sql=true
 spring.jpa.generate-ddl=true
