--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,27 +1,35 @@
 services:
-  app:
-    image: mizdoon:latest
+  database:
+    image: mysql:latest
+    ports:
+      - "3307:3306"
+    environment:
+      MYSQL_ROOT_PASSWORD: rootpassword
+      MYSQL_DATABASE: mizdooni
+    healthcheck:
+      test: ["CMD", "mysqladmin", "ping", "-h", "localhost"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+    networks:
+      - mizdooni-network
+
+  backend:
     build:
       context: .
       dockerfile: Dockerfile
     ports:
-      - "8080:8080"
+      - "8080:8083"
     depends_on:
-      - db
+      database:
+        condition: service_healthy
     environment:
-      SPRING_DATASOURCE_URL: jdbc:mysql://db:3306
+      SPRING_DATASOURCE_URL: jdbc:mysql://database:3306/mizdooni
       SPRING_DATASOURCE_USERNAME: root
       SPRING_DATASOURCE_PASSWORD: rootpassword
+    networks:
+      - mizdooni-network
 
-  db:
-    image: mysql:8.0
-    environment:
-      MYSQL_DATABASE: mizdooni
-      MYSQL_ROOT_PASSWORD: rootpassword
-    ports:
-      - "3306:3306"
-    volumes:
-      - db_data:/var/lib/mysql
-
-volumes:
-  db_data:
+networks:
+  mizdooni-network:
+    driver: bridge
